RESOLVED FIXED115858
Ellipsis text is placed to wrong position, when the truncated text is fully cut off in RTL direction.
https://bugs.webkit.org/show_bug.cgi?id=115858
Summary Ellipsis text is placed to wrong position, when the truncated text is fully c...
alan
Reported 2013-05-09 06:47:47 PDT
<div><input type="text"><strong>push this to the left</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</div> when the window is sized so that the 'push this to the left' text is fully truncated, the replacement ellipsis is placed over the input box.
Attachments
test case (381 bytes, text/html)
2013-05-09 06:48 PDT, alan
no flags
Patch (3.98 KB, patch)
2013-05-09 13:03 PDT, alan
no flags
Archive of layout-test-results from webkit-ews-07 for mac-mountainlion (539.66 KB, application/zip)
2013-05-09 14:16 PDT, Build Bot
no flags
Patch (3.95 KB, patch)
2013-05-10 08:01 PDT, alan
no flags
test case (306 bytes, text/html)
2013-05-11 07:24 PDT, alan
no flags
Patch (3.97 KB, patch)
2013-05-14 04:34 PDT, alan
no flags
alan
Comment 1 2013-05-09 06:48:29 PDT
Created attachment 201187 [details] test case
alan
Comment 2 2013-05-09 13:03:11 PDT
alan
Comment 3 2013-05-09 13:04:42 PDT
notice that this happens when the inline flow has multiple children (inlinetextboxes) (I still need to figure out why window.resize() doesnt work locally)
Build Bot
Comment 4 2013-05-09 14:16:51 PDT
Comment on attachment 201267 [details] Patch Attachment 201267 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/406557 New failing tests: fast/css/text-overflow-ellipsis-full-truncate-rtl.html
Build Bot
Comment 5 2013-05-09 14:16:54 PDT
Created attachment 201277 [details] Archive of layout-test-results from webkit-ews-07 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-07 Port: mac-mountainlion Platform: Mac OS X 10.8.2
alan
Comment 6 2013-05-10 08:01:49 PDT
Darin Adler
Comment 7 2013-05-10 17:58:06 PDT
Comment on attachment 201344 [details] Patch The title of this bug makes no mention of RTL, but the fix is entirely RFL-specific.
Darin Adler
Comment 8 2013-05-10 17:58:18 PDT
RTL-specific
alan
Comment 9 2013-05-11 07:24:04 PDT
Created attachment 201457 [details] test case this test case requires no manual window resizing to repro the bug.
alan
Comment 10 2013-05-14 04:34:40 PDT
WebKit Commit Bot
Comment 11 2013-05-14 05:26:30 PDT
Comment on attachment 201698 [details] Patch Clearing flags on attachment: 201698 Committed r150065: <http://trac.webkit.org/changeset/150065>
WebKit Commit Bot
Comment 12 2013-05-14 05:26:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.