Ellipsis text is placed to wrong position, when the truncated text is fully cut off in RTL direction. https://bugs.webkit.org/show_bug.cgi?id=115858

Patch by Zalan Bujtas <zalan@apple.com> on 2013-05-14
Reviewed by Darin Adler.

Source/WebCore:

Take text direction into account to calculate ellipsis position in case of
full truncation.

Test: fast/css/text-overflow-ellipsis-full-truncate-rtl.html

* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::placeEllipsisBox):

LayoutTests:

* fast/css/text-overflow-ellipsis-full-truncate-rtl-expected.html: Added.
* fast/css/text-overflow-ellipsis-full-truncate-rtl.html: Added.

Canonical link: https://commits.webkit.org/134498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150065 268f45cc-cd09-0410-ab3c-d52691b4dbfc